Add unified notifier module with WhatsApp (Twilio) + Discord fallback

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,12 @@ DISCORD_WEBHOOK_URL=
 # Your Discord user ID for @mentions in reminders (optional)
 DISCORD_USER_ID=
 
+# Twilio WhatsApp notifications (optional)
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_WHATSAPP_FROM=+14155238886
+TWILIO_WHATSAPP_TO=+1XXXXXXXXXX
+
 # Path to your .gguf model file
 MODEL_PATH=llama.cpp/models/meta-llama-3-8b-instruct.Q4_K_M.gguf
 # Path to llama-server executable
